# pants-playground

./: .gitignore  README.md  pants.toml
project1/: pyproject.toml
project1/project1/: __init__.py
project2/project2/: BUILD  main.py
