[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10.0"
pandas = "^1.4.3"
scikit-learn = "^1.1.2"
boto3 = "^1.24.49"
boto3-stubs = "^1.24.49"
awswrangler = "^2.16.1"
lightgbm = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
